fix up styles for header height and overflow issues on smaller displays

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1,9 +1,10 @@
+
 html,
 body {
   margin: 0;
   padding: 0;
   height: 100%;
-//  min-height: 768px;
+  //  min-height: 768px;
 }
 
 body {
@@ -12,7 +13,7 @@ body {
   background: #eaeaea url('../images/bg.png');
   color: #4d4d4d;
   width: 100%;
-  min-height: 700px;
+  min-height: 600px;
   height: 100%;
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
@@ -36,6 +37,7 @@ ul {
   padding: 0;
   list-style: none;
 }
+
 
 @import 'mixins';
 @import 'proto-app';
